# products-api/handlers/middleware.go
@@ -2,24 +2,24 @@ package handlers
 
 import (
 	"context"
-	"go-products-microservice/products-api/repository"
+	"go-products-microservice/products-api/models"
 	"net/http"
 )
 
 type KeyProduct struct {}
 
-type KeyCategories struct {}
-
-func (c Categories) CategoriesMiddleware(next http.Handler) http.Handler {
+func (p Products) ProductsMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func (rw http.ResponseWriter, r *http.Request) {
 		if r.Method == http.MethodPut || r.Method == http.MethodPost {
-			cat := repository.Category{}
-			err := cat.FromJSON(r.Body)
+			product := models.Product{}
+
+			err := product.FromJSON(r.Body)
 			if err != nil {
 				http.Error(rw, "Error trying to parse request body", http.StatusBadRequest)
-				c.logger.Println("Failed parsing JSON request: ", r.Body)
+				p.logger.Println("Failed parsing JSON request: ", r.Body)
 			}
-			ctx := context.WithValue(r.Context(), KeyCategories{}, cat)
+
+			ctx := context.WithValue(r.Context(), KeyProduct{}, product)
 			req := r.WithContext(ctx)
 			next.ServeHTTP(rw, req)
 			return
@@ -29,16 +29,21 @@ func (c Categories) CategoriesMiddleware(next http.Handler) http.Handler {
 	})
 }
 
-func (p Products) ProductsMiddleware(next http.Handler) http.Handler {
+
+type KeyCategories struct {}
+
+func (c Categories) CategoriesMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func (rw http.ResponseWriter, r *http.Request) {
 		if r.Method == http.MethodPut || r.Method == http.MethodPost {
-			product := repository.Product{}
-			err := product.FromJSON(r.Body)
+			cat := models.Category{}
+
+			err := cat.FromJSON(r.Body)
 			if err != nil {
 				http.Error(rw, "Error trying to parse request body", http.StatusBadRequest)
-				p.logger.Println("Failed parsing JSON request: ", r.Body)
+				c.logger.Println("Failed parsing JSON request: ", r.Body)
 			}
-			ctx := context.WithValue(r.Context(), KeyProduct{}, product)
+
+			ctx := context.WithValue(r.Context(), KeyCategories{}, cat)
 			req := r.WithContext(ctx)
 			next.ServeHTTP(rw, req)
 			return
